<resources>
    <string name="app_name">Pianino</string>
    <string name="desc_tit_pianino">Título pianino</string>
    <string name="desc_scores">Icono puntuaciones</string>
    <string name="desc_animales">Icono animales</string>
    <string name="desc_teclado">Icono teclado</string>
    <string name="desc_colores">Icono colores</string>
    <string name="desc_settings">Icono configuración</string>
    <string name="tit_pref_nombre">Preferencia de nombre</string>
    <string name="como_llamas">¡Hola! ¿Cómo te llamas?</string>
    <string name="tu_nombre">Me llamo ...</string>
    <string name="a_jugar">¡A jugar!</string>
    <string name="dificultad_facil">Fácil</string>
    <string name="dificultad_normal">Normal</string>
    <string name="dificultad_dificil">Difícil</string>
    <string name="musica">Música OFF/ON</string>
    <string name="sonido">Sonidos ON/OFF</string>
    <string name="modo">Sonido por defecto Voz/Piano</string>
    <string name="modo_piano">Piano</string>
    <string name="modo_solfeo">Solfeo</string>
    <string name="dificultad">Dificultad</string>
    <string name="configuracion">Configuración</string>
    <string name="cat_jugador">Jugador</string>
    <string name="cat_juego">Juego</string>
    <string name="falta_nombre">¡Escribe tu nombre!</string>
    <string name="hola">¡Hola</string>
    <string name="DO">DO</string>
    <string name="RE">RE</string>
    <string name="MI">MI</string>
    <string name="FA">FA</string>
    <string name="SOL">SOL</string>
    <string name="LA">LA</string>
    <string name="SI">SI</string>
    <string name="descr_instrumento_piano">Sonido de piano</string>
    <string name="descr_sonido_voz">Sonido de voz</string>
    <string name="descr_boton_jugar">Botón jugar</string>
    <string name="desc_mensajes">Texto de mensajes</string>
    <string name="descr_personaje">Personaje que indica en qué modo de pianino estamos</string>
    <string name="descr_pentagrama">pentagrama</string>
    <string name="repite">¡Repite!</string>
    <string name="solucion">Esta es la solución</string>
    <string name="has_ganado">Has ganado</string>
    <string name="puntos">puntos</string>
    <string name="muymal">Oooooh...</string>
    <string name="uyuyuy">Uyuyuy...</string>
    <string name="regulin">¡Regulín!</string>
    <string name="bien">¡Bien!</string>
    <string name="perfecto">¡Perfecto!</string>
    <string name="ultima_puntuacion">Tienes</string>
    <string name="no_has_jugado">Aún no has jugado.</string>

</resources>
